--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "googleapis": "^134.0.0",
+    "json": "^11.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "requests": "^0.3.0",
     "telegraf": "^4.8.1",
     "web-vitals": "^2.1.4"
   },
