--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google-cloud/storage": "^7.9.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -41,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "mocha": "^10.4.0",
     "tailwindcss": "^3.4.3"
   }
 }
