--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "json": "^11.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-scripts": "5.0.1",
     "requests": "^0.3.0",
     "uuid": "^9.0.1",
