--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.1.0",
     "react-lazy-load-image-component": "^1.6.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "requests": "^0.3.0",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
